# ClipB

./: README.md
Clip_B/: Package.resolved  Package.swift  project.yml  test_detector.swift
Clip_B/ClipB/App/: ClipBApp.swift
Clip_B/ClipB/Models/: ClipboardEntry.swift  Collection.swift  ContentType.swift  TimelineSection.swift
Clip_B/ClipB/Services/AI/: AIService.swift  SemanticSearchService.swift
Clip_B/ClipB/Services/Clipboard/: ClipboardMonitor.swift  ContentDetector.swift
Clip_B/ClipB/Services/Database/: DatabaseManager.swift  Migrations.swift
Clip_B/ClipB/Services/Shortcuts/: ShortcutManager.swift
Clip_B/ClipB/ViewModels/: AppState.swift  ClipboardViewModel.swift  CollectionsViewModel.swift  QuickAccessViewModel.swift  SettingsViewModel.swift  StatisticsViewModel.swift
Clip_B/ClipB/Views/Components/: CategoryBadge.swift  DesignSystem.swift  QuickActionButton.swift  SearchBar.swift
Clip_B/ClipB/Views/MainWindow/: ClipboardEntryRow.swift  ClipboardListView.swift  CodeView.swift  CollectionsView.swift  DetailView.swift  FavoritesView.swift  HomeView.swift  ImagesView.swift  MainContentView.swift  SearchView.swift  SettingsView.swift  SidebarView.swift  StatisticsView.swift
Clip_B/ClipB/Views/MenuBar/: MenuBarView.swift
Clip_B/ClipB/Views/QuickAccess/: QuickAccessView.swift  (+1 more)
Clip_B/PythonBackend/: README.md  main.py  pyproject.toml
Clip_B/PythonBackend/models/: schemas.py
Clip_B/PythonBackend/routers/: ai.py
Clip_B/PythonBackend/services/: ai_service.py  config_service.py
Clip_B/Scripts/: build.sh  build_dmg.sh
