[project]
name = "clipb-backend"
version = "1.0.0"
description = "FastAPI AI & OCR Backend for ClipB Clipboard Manager"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "litellm>=1.34.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
